--- a/wp-content/themes/norwalk/sass/_media-queries.scss
+++ b/wp-content/themes/norwalk/sass/_media-queries.scss
@@ -357,4 +357,5 @@
 			}
 		}
 	}
+	#comments-section, #idc-container-parent{ float:none; clear:both; }
 }
